--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>payment</title>title>
-    </head>
-    <body align="center">
-        <form action=""order.html"on submit="return((validate())">
-    <center>
-          <h1>payment</h1><h1>
-            <label>credit card number:</label>
-           <input type="text"name="card"<br><br>
-           <label>cvv:</label>label>
-           <input type="text"name="cvv"><br><br>
-           <input type="submit"value="proceed"</br>
-    </form>
-    <a href=""shopping cart.html">back</a>
-    </body>
-   </html>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+  <header>
+    <h1>Jnana Lakshmi Prasanna</h1>
+    <p>Frontend Developer</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Hello! I'm a passionate web developer focused on building user-friendly websites using HTML, CSS, and JavaScript. I love learning new technologies and solving real-world problems.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>Personal Portfolio Website using HTML and CSS</li>
+      <li>To-Do List App</li>
+      <li>Responsive Landing Page</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>7013379588</h2>
+    <p><a href="jnanalakshmiprasanna123@gmail.com"></a>jnanalakshmiprasanna123@gmail.com</p>
+    <p><a href="https://www.linkedin.com/in/jnana-lakshmi-prasanna-athikinasetti-951456259"></a>linkedin</p>
+  </section>
+
+  <footer>
+    <p> 2025 Jnana Lakshmi Prasanna. All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
